# FastAPI_IDBI_Project

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  Dockerfile  Makefile  PRODUCTION_FIXES_REPORT.md  README.md  _diag2.ps1  _diag2.sh  _diag3.sh  _run_curl_test.ps1  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  server.py
.chroma/: chroma.sqlite3
.github/workflows/: ci.yml
advisor/: main.py
advisor/api/: deps.py
advisor/core/: config.py  error_handlers.py  exceptions.py  middleware.py
advisor/domain/: entities.py  enums.py
advisor/repositories/: __init__.py  deepseek_llm.py  nvidia_llm.py  openbb_market_data.py  rag_knowledge.py
advisor/schemas/: __init__.py  request.py  response.py
advisor/services/: __init__.py  advisor_service.py  portfolio_analyzer.py  prompt_builder.py
app/: __init__.py  main.py
app/api/: deps.py
app/core/: config.py  error_handlers.py  logging.py  middleware.py
app/domain/: entities.py
app/repositories/: __init__.py  deepseek_llm.py  openbb_market_data.py  rag_knowledge.py
app/schemas/: __init__.py  request.py  response.py
app/services/: __init__.py  advisor_service.py  portfolio_analyzer.py  (+1 more)
budget/: __init__.py  main.py
coach/: __init__.py  main.py
common/: __init__.py  hardening.py  ratelimit.py  settings.py
market/: __init__.py  main.py
rag/: __init__.py  main.py
savings/: __init__.py  main.py
scripts/: curl_tests.sh  run_all_tests.ps1  run_all_tests.sh
tests/: conftest.py  test_advisor_api.py  test_portfolio_analyzer.py  test_suite_integration.py
(+168 files in other folders)
