[project]
name = "financial-suite"
version = "1.0.0"
description = "Enterprise financial-intelligence suite: Investment Advisor + Financial Coach (FastAPI, Clean Architecture, RAG + DeepSeek V3)."
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
